Fri Dec 14 19:36:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Added patch

Sun Dec  9 14:38:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/POSIX_Proactor.cpp:
        * ace/Parse_Node.cpp:
        * ace/SV_Message_Queue.inl:
        * ace/SV_Message_Queue.cpp:
          Fixed coverity errors

Fri Dec  7 20:14:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
          Improved support for gcov=1

Fri Dec  7 13:06:07 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Strategies_T.cpp:
          Check return value of enable (ACE_NONBLOCK), fixes Coverity
          reported errors

Thu Nov 29 15:08:26 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (handle_timed_complete): Adapt to an occasionally seen
          scenario where only the POLLERR bit is set on a failed connect.
          This is for the poll() case, not select().

Thu Nov 29 10:31:05 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Stream.cpp:
          Removed another occurance of arm handling here, gets handled
          at a lower layer already

Thu Nov 29 10:10:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Service_Config.h:
          Fixed compile errors in xml builds

Thu Nov 29 08:49:39 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Stream.cpp:
          Removed arm handling here, gets handled at a lower layer
          already

Wed Nov 28 09:34:00 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/libace-dev.install:
          rle has no install files

Wed Nov 28 08:55:49 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/ace.dsc:
        * debian/debian.changelog:
        * debian/debian.compat:
        * debian/debian.control:
        * debian/debian.rules:
        * debian/libace-6.1.6.install: